--- a/random_forest.Rmd
+++ b/random_forest.Rmd
@@ -78,7 +78,7 @@ folds <- vfold_cv(data = train, v = 10)
 
 recipe <-
   recipe(formula = ridership ~ ., data = train) %>%
-  step_dummy(alnominal_predictors()) %>% 
+  step_dummy(all_nominal_predictors()) %>% 
   #step_center(all_numeric_predictors()) %>%
   step_holiday(date, holidays = timeDate::listHolidays("US"))
 ```
