--- a/visualizations.Rmd
+++ b/visualizations.Rmd
@@ -103,6 +103,14 @@ hour_data_date %>%
   geom_point(aes(x = day, y = lincoln_memorial,
                  color=type)) # there is no clear pattern across days of the month - aka probably not a good predictor
 
+# farah's code here although similar to first one here?
+#hour_data_date %>%
+  #mutate(weekday = wday(date, label=TRUE)) %>%
+  #ggplot(aes(x = weekday, y = lincoln_memorial)) +
+  #geom_point(alpha = 0.25) +
+  #labs(title = "Capital bikeshare Ridership on Week days") +
+  #theme_minimal()
+
 
 ```
 
@@ -191,8 +199,40 @@ dep_sf %>%
 
 ## Visualizations by weather at Lincoln Memorial
 
-```{r weather}
+```{r temperature}
 
+hour_data_date %>%
+  ggplot(aes(x=maximum_temperature,y=lincoln_memorial))+
+  geom_point(alpha=0.07,color='orange')+
+  labs(x='Temperature', y= 'Hourly Departures and Arrivals')+
+  geom_smooth(method='lm',color= 'red') # as the maximum temperature goes up, departures and arrivals go up
 
+# I got this code online so still want to improve this a little bit
+# also notice that there is missing data
+
+```
+
+```{r temperature}
+
+hour_data_date %>%
+  ggplot(aes(x=wind_speed,y=lincoln_memorial))+
+  geom_point(alpha=0.07,color='blue')+
+  labs(x='Wind Speed', y= 'Hourly Departures and Arrivals') 
+  #geom_smooth(method='lm',color= 'red') # when I add this I get an upward trend, which is weird since it's a negative relationship?
+
+# I got this code online so still want to improve this a little bit
+# also notice that there is missing data
+
+```
+
+```{r rain}
+
+hour_data_date %>%
+  ggplot(aes(x=precipitation,y=lincoln_memorial))+
+  geom_point(alpha=0.07,color='blue')+
+  labs(x='Precipiation', y= 'Hourly Departures and Arrivals') +
+  geom_smooth(method='lm',color= 'red') # Negative relationship between bike usage and precipitation as expected
+
+# definitely need to do some transformations to the rain variable as there doesn't seem to be a lot of variation?
 
 ```
