--- a/visualizations.Rmd
+++ b/visualizations.Rmd
@@ -199,11 +199,11 @@ dep_sf %>%
 
 ## Visualizations by weather at Lincoln Memorial
 
-```{r temperature}
+```{r temperature1}
 
 hour_data_date %>%
   ggplot(aes(x=maximum_temperature,y=lincoln_memorial))+
-  geom_point(alpha=0.07,color='orange')+
+  geom_point(alpha=0.07,color='yellow')+
   labs(x='Temperature', y= 'Hourly Departures and Arrivals')+
   geom_smooth(method='lm',color= 'red') # as the maximum temperature goes up, departures and arrivals go up
 
