--- a/visualizations.Rmd
+++ b/visualizations.Rmd
@@ -205,13 +205,12 @@ dep_sf %>%
 hour_data_date %>%
   ggplot(aes(x=maximum_temperature,y=lincoln_memorial))+
   geom_point(alpha=0.07,color='yellow')+
-=======
-```{r temperature}
+  labs(x='Temperature', y= 'Hourly Departures and Arrivals')+
+  geom_smooth(method='lm',color= 'red')
 
 hour_data_date %>%
   ggplot(aes(x=maximum_temperature,y=lincoln_memorial))+
   geom_point(alpha=0.07,color='orange')+
->>>>>>> Stashed changes
   labs(x='Temperature', y= 'Hourly Departures and Arrivals')+
   geom_smooth(method='lm',color= 'red') # as the maximum temperature goes up, departures and arrivals go up
 
