--- a/visualizations.Rmd
+++ b/visualizations.Rmd
@@ -39,6 +39,7 @@ library(jsonlite)
 source("times.R")
 source("io.R")
 source("manipulate_data.R")
+library(tidymodels)
 ```
 
 
@@ -72,6 +73,44 @@ data <- sep_departures_from_arrivals(cbs_data) %>%
 hour_data <- get_station_hourly(data) %>% 
   get_historic_weather() # added weather
 
+
+# The grouped data does not have the original date column, but it can be nice
+#  for visualizations. There is a function to do this in times.R
+hour_date_date <- add_date_column(hour_data)
+
+```
+
+## Splitting training vs testing data
+
+
+```{r split}
+set.seed(28021995)
+
+# create a split object
+data_split <- initial_split(hour_data_date, prop = 0.8)
+
+# create the training and testing data
+train_date_date <- training(x = data_split)
+test_date_date  <- testing(x = data_split)
+```
+
+## Summary stats
+
+```{r stats_dependent}
+
+train_date_date%>%
+  summarize(mean(lincoln_memorial), max(lincoln_memorial), min(lincoln_memorial), sd(lincoln_memorial)) # how can we get better sumamry stats? maybe not split by hour?
+
+```
+
+
+```{r stats_weather}
+
+train_date_date %>%
+ # mutate(weekday = wday(date, label=TRUE)) %>%
+  group_by(month) %>%
+  summarize(mean(temperature), max(temperature), min(temperature), sd(temperature)) 
+
 ```
 
 ## Visualizations by time at Lincoln Memorial
@@ -79,29 +118,20 @@ hour_data <- get_station_hourly(data) %>%
 Amount of rides at the Lincoln memorial over all the time, and by various metrics
 
 ```{r visualizations}
-# The grouped data does not have the original date column, but it can be nice
-#  for visualizations. There is a function to do this in times.R
-hour_data_date <- add_date_column(hour_data)
 
-hour_data_date %>%  # for me here there is a weird gap after July 2020, not sure why?
+train_date_date %>%  # for me here there is a weird gap after July 2020, not sure why?
   ggplot() +
   geom_point(aes(x = date, y = lincoln_memorial,
                  color = type))
 ```
 
-```{r day}
+```{r weekday}
 # by weekday
-hour_data_date %>% 
+train_date_date %>% 
   mutate(weekday = wday(date, label=TRUE)) %>% 
   ggplot() +
   geom_point(aes(x = weekday, y = lincoln_memorial,
                  color=type)) # clearly people cycle more on saturdays and sundays
-
-# by day of the month
-hour_data_date %>% 
-  ggplot() +
-  geom_point(aes(x = day, y = lincoln_memorial,
-                 color=type)) # there is no clear pattern across days of the month - aka probably not a good predictor
 
 # farah's code here although similar to first one here?
 #hour_data_date %>%
@@ -114,10 +144,19 @@ hour_data_date %>%
 
 ```
 
+```{r dayofmonth}
+# by day of the month
+train_date_date %>% 
+  ggplot() +
+  geom_point(aes(x = day, y = lincoln_memorial,
+                 color=type)) # there is no clear pattern across days of the month - aka probably not a good predictor
+
+```
+
 ```{r hour}
 
 # by hour
-hour_data_date %>% 
+train_date_date %>% 
   ggplot() +
   geom_point(aes(x = hour, y = lincoln_memorial,
                  color=type)) # people cycle more in the middle of the day, like between 1 and 7PM
@@ -126,15 +165,17 @@ hour_data_date %>%
 
 ```{r month}
 
-hour_data_date %>% 
+train_date_date %>% 
   ggplot() +
   geom_point(aes(x = month, y = lincoln_memorial,
-                 color=type)) # people cycle most in Spring, summer and fall. SUprised that there is no big spike in summer months
+                 color=type)) # people cycle most in Spring, summer and fall. Suprised that there is no big spike in summer months
 
 ```
+
+
 ```{r year}
 
-hour_data_date %>% # something is off with the year variable
+train_date_date %>% # something is off with the year variable
   ggplot() +
   geom_point(aes(x = year, y = lincoln_memorial,
                  color=type)) # overall, more people use the service in 2021 than in 2020
@@ -144,7 +185,7 @@ hour_data_date %>% # something is off with the year variable
 ```{r specific day}
 
 # for a specific month and day, seeing variance by hour
-hour_data_date %>% 
+train_date_date %>% 
   filter(year == 2021, month == "Aug", day == 15) %>% 
   ggplot() +
   geom_line(aes(x  =hour, y = lincoln_memorial,
@@ -201,13 +242,13 @@ dep_sf %>%
 
 ```{r temperature1}
 
-hour_data_date %>%
+train_date_date %>%
   ggplot(aes(x=maximum_temperature,y=lincoln_memorial))+
   geom_point(alpha=0.07,color='yellow')+
   labs(x='Temperature', y= 'Hourly Departures and Arrivals')+
   geom_smooth(method='lm',color= 'red')
 
-hour_data_date %>%
+train_date_date %>%
   ggplot(aes(x=maximum_temperature,y=lincoln_memorial))+
   geom_point(alpha=0.07,color='orange')+
   labs(x='Temperature', y= 'Hourly Departures and Arrivals')+
@@ -220,7 +261,7 @@ hour_data_date %>%
 
 ```{r temperature}
 
-hour_data_date %>%
+train_date_date %>%
   ggplot(aes(x=wind_speed,y=lincoln_memorial))+
   geom_point(alpha=0.07,color='blue')+
   labs(x='Wind Speed', y= 'Hourly Departures and Arrivals') 
@@ -233,7 +274,7 @@ hour_data_date %>%
 
 ```{r rain}
 
-hour_data_date %>%
+train_date_date %>%
   ggplot(aes(x=precipitation,y=lincoln_memorial))+
   geom_point(alpha=0.07,color='blue')+
   labs(x='Precipiation', y= 'Hourly Departures and Arrivals') +
